@@ -20,3 +20,28 @@ WriteMakefile(
     LDDLFLAGS => $Config{lddlflags} . ' -lobjc -framework CoreFoundation -framework Foundation',
     DEFINE => '-ObjC -DHAS_BOOL',
 );
+
+# fix compilation issues on Darwin: see RT#73539
+{
+  package MY;
+  sub xs_c {
+    my $s = shift->SUPER::xs_c(@_);
+    $s .= "\n\t\$(MV) \$*.c \$*.m";
+    return $s;
+  }
+  sub c_o {
+    my $s = shift->SUPER::c_o(@_);
+    $s =~ s/\*\.c/\*.m/g;
+    return $s;
+  }
+  sub xs_o {
+    my $s = shift->SUPER::xs_o(@_);
+    $s =~ s/\*\.c/\*.m/g;
+    return $s;
+  }
+  sub special_targets {
+    my $s = shift->SUPER::special_targets(@_);
+    $s =~ s/\.xs \.c/.xs .m .c/;
+    return $s;
+  }
+}
