@@ -30,3 +30,27 @@ header = |die "Requires a compiler\n" if not can_compile_loadable_object(quiet =
 header = |use Config;
 WriteMakefile_arg = LDDLFLAGS => $Config{lddlflags} . ' -lobjc -framework CoreFoundation -framework Foundation'
 WriteMakefile_arg = DEFINE => '-ObjC -DHAS_BOOL'
+footer = |# fix compilation issues on Darwin: see RT#73539
+footer = |{
+footer = |  package MY;
+footer = |  sub xs_c {
+footer = |    my $s = shift->SUPER::xs_c(@_);
+footer = |    $s .= "\n\t\$(MV) \$*.c \$*.m";
+footer = |    return $s;
+footer = |  }
+footer = |  sub c_o {
+footer = |    my $s = shift->SUPER::c_o(@_);
+footer = |    $s =~ s/\*\.c/\*.m/g;
+footer = |    return $s;
+footer = |  }
+footer = |  sub xs_o {
+footer = |    my $s = shift->SUPER::xs_o(@_);
+footer = |    $s =~ s/\*\.c/\*.m/g;
+footer = |    return $s;
+footer = |  }
+footer = |  sub special_targets {
+footer = |    my $s = shift->SUPER::special_targets(@_);
+footer = |    $s =~ s/\.xs \.c/.xs .m .c/;
+footer = |    return $s;
+footer = |  }
+footer = |}
